// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeerList should add peer 1`] = `
<DocumentFragment>
  <div>
    <div
      class="sc-AxiKw bvfChE"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Network
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Name
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Peer IP
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-2"
                >
                  Type
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="inline-flex items-center py-4 mt-1"
            >
              <div
                class="sc-fznKkj eisocE text-logo border-theme-danger-200"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <span
                class="ml-2"
              >
                ARK
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                ROBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="float-right outline-none cursor-pointer focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="inline-flex items-center py-4 mt-1"
            >
              <div
                class="sc-fznKkj eisocE border-theme-neutral-300"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
              <span
                class="ml-2"
              >
                ETHEREUM
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                MATBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="float-right outline-none cursor-pointer focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="inline-flex items-center py-4 mt-1"
            >
              <div
                class="sc-fznKkj eisocE text-theme-warning-400 border-theme-warning-200"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
              <span
                class="ml-2"
              >
                BITCOIN
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                OLEBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="float-right outline-none cursor-pointer focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="sc-AxjAm ddJBbC w-full mt-8 mb-2"
      color="primary"
      data-testid="peer-list__add-button"
      type="button"
    >
      Add Peer
    </button>
    <div
      class="fixed inset-0 z-50 bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fznyAO dWLwOg fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5"
      >
        <button
          class="sc-AxjAm bThAoP"
          color="neutral"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="py-4"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Custom Peers
        </h2>
        <div
          class="flex-1"
        >
          <form
            class="space-y-8"
            data-testid="Form"
          >
            <fieldset
              class="sc-AxhUy dJlYTe mt-8"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="network"
              >
                Network
              </label>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="downshift-0-label"
                class="relative"
                role="combobox"
              >
                <label
                  for="downshift-0-input"
                  id="downshift-0-label"
                />
                <div
                  class="relative flex items-center w-full flex-inline"
                >
                  <div
                    class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
                  >
                    <div
                      class="px-4 py-2 flex-0 w-14"
                    >
                      <div
                        class="sc-fznKkj bnRNAS border-theme-neutral-200"
                      />
                    </div>
                    <div
                      class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
                    >
                      <div
                        class="relative z-10 w-full"
                        data-testid="select-network__typeahead-"
                      >
                        <div
                          class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                        />
                      </div>
                      <input
                        aria-autocomplete="list"
                        aria-labelledby="downshift-0-label"
                        autocomplete="off"
                        class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                        data-testid="select-asset__input"
                        id="downshift-0-input"
                        name="network"
                        placeholder="Enter a network name"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </fieldset>
            <fieldset
              class="sc-AxhUy dJlYTe flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                class="sc-AxgMl cMCunF overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                data-testid="Input"
                name="name"
              />
            </fieldset>
            <fieldset
              class="sc-AxhUy dJlYTe flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="peer-ip"
              >
                Peer IP http://
              </label>
              <input
                class="sc-AxgMl cMCunF overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                data-testid="Input"
                name="peer-ip"
              />
            </fieldset>
            <fieldset
              class="sc-AxhUy dJlYTe flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="peer-type"
              >
                Peer Type
              </label>
              <label
                class="inline-flex items-center"
                for="multisig"
              >
                <input
                  class="sc-AxhCb ioKoGj"
                  color="success"
                  type="checkbox"
                />
                <span
                  class="ml-2 text-sm font-semibold text-theme-neutral-dark"
                >
                  Multisig
                </span>
              </label>
            </fieldset>
            <div
              class="float-right mt-4"
            >
              <button
                class="sc-AxjAm ddQVWI"
                color="primary"
                data-testid="peer-list__add-button"
                type="submit"
              >
                Add Peer
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PeerList should render 1`] = `
<DocumentFragment>
  <div>
    <div
      class="sc-AxiKw bvfChE"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Network
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Name
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Peer IP
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-2"
                >
                  Type
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="inline-flex items-center py-4 mt-1"
            >
              <div
                class="sc-fznKkj eisocE text-logo border-theme-danger-200"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <span
                class="ml-2"
              >
                ARK
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                ROBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="float-right outline-none cursor-pointer focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="inline-flex items-center py-4 mt-1"
            >
              <div
                class="sc-fznKkj eisocE border-theme-neutral-300"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
              <span
                class="ml-2"
              >
                ETHEREUM
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                MATBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="float-right outline-none cursor-pointer focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
          >
            <td
              class="inline-flex items-center py-4 mt-1"
            >
              <div
                class="sc-fznKkj eisocE text-theme-warning-400 border-theme-warning-200"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
              <span
                class="ml-2"
              >
                BITCOIN
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                OLEBank
              </span>
            </td>
            <td
              class="py-1"
            >
              <span>
                194.168.4.67:800
              </span>
            </td>
            <td
              class="py-1 text-theme-primary-300"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="float-right outline-none cursor-pointer focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="sc-AxjAm ddJBbC w-full mt-8 mb-2"
      color="primary"
      data-testid="peer-list__add-button"
      type="button"
    >
      Add Peer
    </button>
  </div>
</DocumentFragment>
`;

exports[`PeerList should render with empty peer list 1`] = `
<DocumentFragment>
  <div>
    <div
      class="sc-AxiKw bvfChE"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Network
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Name
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Peer IP
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  flex justify-center"
              >
                <div
                  class="mr-2"
                >
                  Type
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
    <button
      class="sc-AxjAm ddJBbC w-full mt-8 mb-2"
      color="primary"
      data-testid="peer-list__add-button"
      type="button"
    >
      Add Peer
    </button>
  </div>
</DocumentFragment>
`;
